commit for 20130620XX.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -302,7 +302,7 @@
                 ]]>
     </string>
 
-    <string name="rf_2013041201"><![CDATA[
+    <string name="rf_2013062001"><![CDATA[
             <html>
             <head>
             <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -332,12 +332,12 @@
             <li>
             Авторизация не нужна. Теперь после свежей инсталляции можно сразу смотреть все публичные сообщения и подобное.
             Логин-пароль спросится лишь когда будет нужно, для подписок, дополнительных функций и прочих персонализированных вещей.
-            Не вводим пароль от жаббера, вводим вебский пароль.
+            Не вводим пароль от жаббера, вводим пароль используемый на сайте, а если его нет, то на сайте предварительно настраиваем его.
             </li>
             <li>
-            Для инсталляций программы на карточку - стандартное сохранение жуйковского пароля в аккаунтах андроида не работает. Для этих случаев есть
-            опция "сохранить пароль рядом с программой", галочка во время логина. Приватные настройки программы хранятся на вашей карточке
-            в директории с программой, записанные в читабельном виде, имейте это в виду когда ставите галочку "сохранить рядом с программой".
+            Для инсталляций программы на карточку - стандартное сохранение жуйковского пароля в аккаунтах андроида не работает. Для этих случаев теперь в программе есть
+            опция \"сохранить пароль рядом с программой\", галочка во время логина. Приватные настройки программы хранятся на вашей карточке
+            в директории с программой, записанные в читабельном виде, имейте это в виду когда ставите галочку \"сохранить рядом с программой\".
             </li>
             <li>
             ВАЖНО: если вдруг вас мучает то, что программа падает, ломается, внезапно останавливается или сообщает о непонятной ошибке,
