commit for 20130819XX.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -317,8 +317,16 @@
             <body>
 
             <form>
-            <b>Июнб 2013, летний билд</b>
+            <b>Август 2013, летний билд</b>
             <ul>
+            <li>
+            Родные уведомления Juick (посредством push message прямо с juick.com). Правда, там пока приходят уведомления далеко не обо
+            всех новых сообщениях, так что годится только как резервный источник уведомлений, чтобы было хоть что-нибудь,
+            если Juick Advanced сервер на профилактике (упал). Включать в настройках.
+            </li>
+            <li>
+            Новые источники: "недавно читанные", "недавно комментированные"
+            </li>
             <li>
             Добавил к облаку тегов служебные теги при создании нового сообщения.
             </li>
