--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -304,6 +304,55 @@
                 ]]>
     </string>
 
+    <string name="rf_2013100101"><![CDATA[
+            <html>
+            <head>
+            <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+            <style>
+                input {
+                    -webkit-transform: scale(1.4,1.4);
+                }
+            </style>
+            </head>
+            <body>
+
+            <form>
+            <b>Октябрь 2013, зимний билд</b>
+            <ul>
+            <li>
+            Правильно обрабатываются ИНЫЕ урлы картинок в juick-сообщениях.
+            </li>
+            <li>
+            Синхронизация между устройствами, а также оно будет работать как "резервная копия" если вы
+            вдруг поставите свежую копию Juick Advanced на перепрошитый телефон.
+            Синхронизируются: "сохраненные сообщения", а также маркеры прочитанных мессаг.
+            Кроме того, при желании вы можете получить секретную ссылочку на читабельный вид
+            своих сохраненных сообщений на Juick Advanced сервере. Ссылочка получается в местном
+            контекстном меню во время просмотра сохраненных.
+            Включать тут: <input type="checkbox" name="prefs.enableSynchronization" #prefs.checked.enableSynchronization#>
+            </li>
+            <li>
+            Аппаратное ускорение скроллинга. У меня по умолчанию на андроиде 4.0 для программ выключена.
+            Включил - стало гораздо приятнее. А у кого-то без разницы. Включать тут: <input type="checkbox" name="prefs.hardware_accelerated" #prefs.checked.hardware_accelerated#>
+            </li>
+            <li>
+            Вдобавок к готичненькому шрифту для тегов, добавил более компактный шрифт для самих мессаг.
+            Как обычно, не могу не порекомендовать. Включить: <input type="checkbox" name="prefs.helvNueFonts" #prefs.checked.helvNueFonts#>
+            </li>
+            <li>
+            Из прочего: Более устойчивый коннект за уведомлениями. Отмена диалога авторизации вроде даже работает.
+            Опция таймаута - для медленных соединений (GPRS), потом перенесу в настройки сети, пока в "отладке".
+            Инсталляции бет качаются download manager-ом.
+            Декоративные изменения: добавил цвет в кнопку меню, и проч.
+            </li>
+
+            <hr>
+            Все фичи Juick Advanced можно посмотреть в настройках, пункт \"Что Нового\".
+
+            #script#
+
+            ]]>
+    </string>
     <string name="rf_2013062001"><![CDATA[
             <html>
             <head>
