commit for 20131001XX.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -323,27 +323,30 @@
             Правильно обрабатываются ИНЫЕ урлы картинок в juick-сообщениях.
             </li>
             <li>
-            Синхронизация между устройствами, а также оно будет работать как "резервная копия" если вы
+            Синхронизация между устройствами. Также будет работать как "резервная копия", если вы
             вдруг поставите свежую копию Juick Advanced на перепрошитый телефон.
-            Синхронизируются: "сохраненные сообщения", а также маркеры прочитанных мессаг.
+            На текущий момент синхронизируются \"сохраненные сообщения\" и маркеры прочитанных мессаг.
             Кроме того, при желании вы можете получить секретную ссылочку на читабельный вид
             своих сохраненных сообщений на Juick Advanced сервере. Ссылочка получается в местном
             контекстном меню во время просмотра сохраненных.
             Включать тут: <input type="checkbox" name="prefs.enableSynchronization" #prefs.checked.enableSynchronization#>
             </li>
             <li>
-            Аппаратное ускорение скроллинга. У меня по умолчанию на андроиде 4.0 для программ выключена.
-            Включил - стало гораздо приятнее. А у кого-то без разницы. Включать тут: <input type="checkbox" name="prefs.hardware_accelerated" #prefs.checked.hardware_accelerated#>
+            Аппаратное ускорение скроллинга. Включил - стало гораздо приятнее. А у кого-то без разницы.
+            Включать тут: <input type="checkbox" name="prefs.hardware_accelerated" #prefs.checked.hardware_accelerated#>
             </li>
             <li>
             Вдобавок к готичненькому шрифту для тегов, добавил более компактный шрифт для самих мессаг.
             Как обычно, не могу не порекомендовать. Включить: <input type="checkbox" name="prefs.helvNueFonts" #prefs.checked.helvNueFonts#>
             </li>
             <li>
-            Из прочего: Более устойчивый коннект за уведомлениями. Отмена диалога авторизации вроде даже работает.
-            Опция таймаута - для медленных соединений (GPRS), потом перенесу в настройки сети, пока в "отладке".
-            Инсталляции бет качаются download manager-ом.
-            Декоративные изменения: добавил цвет в кнопку меню, и проч.
+            Из прочего: <ul>
+            <li>Более устойчивый коннект к серверу Juick Advanced (уведомления).
+            <li>Отмена диалога авторизации работает правильно.
+            <li>Опция таймаута - для медленных соединений (GPRS), включать в "отладке".
+            <li>Инсталляции бет качаются download manager-ом.
+            <li>Декоративные изменения: добавил цвет в кнопку меню, и проч.
+            </ul>
             </li>
 
             <hr>
