new design - work in progress

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1198,5 +1198,9 @@
         reinstalls.
     </string>
 
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
+
 
 </resources>
