--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1206,5 +1206,5 @@
     <string name="EnablePullToRefresh">Enable pull to refresh</string>
     <string name="TurnOffButtonsLight">Turn off buttons light</string>
 
-
+    <string name="Censor">Censor</string>
 </resources>
