--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1206,6 +1206,7 @@
     <string name="EnablePullToRefresh">Enable pull to refresh</string>
     <string name="TurnOffButtonsLight">Turn off buttons light</string>
     <string name="ShowDigitsOnIcon">Show digits on icon</string>
+    <string name="No">No</string>
 
 
 </resources>
