--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -325,6 +325,11 @@
             <li>
             Фотографии которые аттачатся прямо из камеры, сейчас сохраняются в альбом.
             </li>
+            <li>
+            Багфиксы: показываются огороженные сообщения в общей ленте и в прочих, улучшения отправки фотографии, запись ее в фотоальбом,
+            проблемы с поворотом во время аттача, уменьшен минимальный размер фонта для супер-высокого разрешения, аватары
+            в ленте обновляются, баг вылезший в Android 4.4.
+            </li>
             </ul>
 
             <hr>
