commit for 20140206XX.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1256,4 +1256,5 @@
     <string name="No">No</string>
 
     <string name="Censor">Censor</string>
+    <string name="NewMsgTemplate">New Msg Template</string>
 </resources>
