--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -495,6 +495,7 @@
     <string name="TurnOffButtonsLight">Отключать подсветку кнопок</string>
     <string name="ShowDigitsOnIcon">Циферки на иконке</string>
     <string name="No">Нет</string>
+    <string name="NewMsgTemplate">Шаблон нового сообщения</string>
 
 
 </resources>
